--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "rajifawass345@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpstan/phpstan": "^2.1"
+    }
 }
